[FIX] fixed reCaptcha beeing in the wrong place on mobile devices

--- a/src/styles/utilities/_utilities.scss
+++ b/src/styles/utilities/_utilities.scss
@@ -75,6 +75,10 @@
   height: 100% !important;
 }
 
+.u-max-width {
+  width: 100% !important;
+}
+
 .u-btn-nav-alternative {
   &,
   &:link,
